--- a/css/style.css
+++ b/css/style.css
@@ -224,8 +224,8 @@ textarea.materialize-textarea:focus:not([readonly]) {
   background-color: black;
   color: #fff;
   text-align: center;
-  padding: 5px 0;
-  border-radius: 6px;
+  padding: 5px;
+  border-radius: 2px;
  
   /* Position the tooltip text - see examples below! */
   position: absolute;
@@ -257,4 +257,10 @@ textarea.materialize-textarea:focus:not([readonly]) {
 
 ::placeholder { /* Most modern browsers support this now. */
  color:    #757575;
+}
+
+.square-ul {
+  list-style-type: square;
+  list-style-position: outside;
+
 }
