--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
  * Use this file to override Materialize files so you can update
  * the core Materialize files in the future
  *
- * Made By MaterializeCSS.com
+ * Made By MaterializeCSS.com - awesomized by Hari Patel
  */
 
 .icon-block {
